# midi-parquet

./: README.md  duck.ipynb  fault.mid  main.py  pyproject.toml  test.py
