[project]
name = "midi-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "symusic>=0.5.8",
    "tqdm>=4.66.0",
    "plotext>=5.2.8",
]
